--- a/templates/iniciarsesion.html
+++ b/templates/iniciarsesion.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Code Analizer - Iniciar sesión</title>
-    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
-    <link href="../static/css/styles.css" rel="stylesheet">
+    <!-- Tailwind CSS -->
+    <link href="{{ url_for('static', filename='css/tailwind.css') }}" rel="stylesheet">
+    <!-- Estilos personalizados -->
+    <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
 </head>
 <body class="main">
     <header class="encabezado">
