--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,5 @@
 .main{
-    background-color: #2F4D8F;
+    background-color: #001862;
     display: flex;
     align-items: center;
     justify-content: center;
